# rogit

./: Cargo.toml  LICENSE  README.md  git.go  go.mod  go.sum  main.go  router.go
docs/: api.md  refs.md  tags.md  ui.md
src/: config.rs  main.rs
src/database/: branch.rs  change.rs  commit.rs  contributor.rs  datetime.rs  message.rs  mod.rs  relation.rs  repository.rs  tag.rs
src/server/: mod.rs
src/update/: mod.rs
web/layout/: base.html  index.html  refs.html  tree.html
web/static/: output.css
