[package]
name = "rogit"
version = "0.0.3"
authors = ["qaqland <qaq@qaq.land>"]
keywords = ["git", "sqlite", "website"]
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7.5", features = ["macros"] }
clap = { version = "4.5.16", features = ["cargo"] }
indoc = "2"
git2 = { version = "0.18", default-features = false }
log = "0.4.22"
rusqlite = { version =  "0.32", features = ["time"] }
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
walkdir = "2.5.0"
time = "0.3"

[profile.release]
# debug = true
